--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,5 +1,38 @@
 
 services:
+
+  mariadb:
+    build: requirements/mariadb/.
+    container_name: mariadb
+    environment:
+      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: 1234
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./db:/var/lib/mysql
+    networks:
+      - site-network
+
+  wordpress:
+    build: requirements/wordpress/.
+    container_name: wordpress
+    depends_on:
+      - mariadb
+    environment:
+      WORDPRESS_DB_HOST: mariadb:3306
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: 1234
+      WORDPRESS_DB_NAME: wordpress
+    ports:
+      - "9000:9000" 
+    volumes:
+      - ./web:/var/www/html
+    networks:
+      - site-network
+
   nginx:
     build: requirements/nginx/.
     container_name: nginx
@@ -12,15 +45,6 @@ services:
     networks:
       - site-network
 
-  wordpress:
-    build: requirements/wordpress/.
-    container_name: wordpress
-    ports:
-      - "9000:9000" 
-    volumes:
-      - ./web:/var/www/html
-    networks:
-      - site-network
 
 networks:
   site-network:
