--- a/src/requirements/wordpress/Dockerfile
+++ b/src/requirements/wordpress/Dockerfile
@@ -1,10 +1,10 @@
 FROM debian:bullseye
 
-RUN apt update && apt upgrade -y && apt install -y php-fpm php-mysqli curl
+RUN apt update && apt upgrade -y && apt install -y php-fpm php-mysqli curl bash
 
-COPY ./wp-config.php /var/www/html/wp-config.php
-COPY ./www.conf etc/php/7.4/fpm/pool.d/.
-COPY ./wp.sh /.
+COPY wp-config.php .
+COPY www.conf etc/php/7.4/fpm/pool.d/.
+COPY wp.sh .
 
 RUN chmod +x wp.sh
 RUN mkdir -p /run/php/
