--- a/src/requirements/mariadb/Dockerfile
+++ b/src/requirements/mariadb/Dockerfile
@@ -1,7 +1,14 @@
-FROM mariadb:10.5
+FROM debian:bullseye
 
-# RUN apt update && apt upgrade -y && apt install -y mariadb-server
+RUN apt update && apt upgrade -y && apt install -y mariadb-server
+
+RUN mkdir -p /var/run/mysqld /var/lib/mysql && chown -R mysql:mysql /var/run/mysqld /var/lib/mysql
+
+COPY my.cnf /etc/mysql/my.cnf
+COPY db.sh .
+
+RUN chmod +x db.sh
 
 EXPOSE 3306
 
-CMD ["mysqld"]
+CMD ["./db.sh"]
