--- a/src/requirements/wordpress/Dockerfile
+++ b/src/requirements/wordpress/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:bullseye
 
-RUN apt update && apt upgrade -y && apt install -y php-fpm php-mysqli curl bash
+RUN apt update && apt upgrade -y && apt install -y php-fpm php-mysqli curl bash netcat-traditional
 
 COPY wp-config.php .
 COPY www.conf etc/php/7.4/fpm/pool.d/.
