finally got it back up running again, found a very useful docker command and added a makefile command for it. as well as doing some smaller tweaks on the containers

--- a/src/requirements/nginx/Dockerfile
+++ b/src/requirements/nginx/Dockerfile
@@ -1,6 +1,8 @@
 FROM debian:bullseye
 
 RUN apt update && apt upgrade -y && apt install -y nginx
+RUN chown -R www-data:www-data /var/www/html
+RUN chmod -R 755 /var/www/html
 
 EXPOSE 80
 
