--- a/src/requirements/mariadb/Dockerfile
+++ b/src/requirements/mariadb/Dockerfile
@@ -2,13 +2,12 @@ FROM debian:bullseye
 
 RUN apt update && apt upgrade -y && apt install -y mariadb-server
 
-RUN mkdir -p /var/run/mysqld /var/lib/mysql && chown -R mysql:mysql /var/run/mysqld /var/lib/mysql
+RUN mkdir -p /var/run/mysqld && chown -R mysql:mysql /var/run/mysqld && chmod -R 755 /var/run/mysqld
 
-COPY my.cnf /etc/mysql/my.cnf
+COPY 50-server.cnf .
 COPY db.sh .
-
-RUN chmod +x db.sh
 
 EXPOSE 3306
 
+RUN chmod +x db.sh
 CMD ["./db.sh"]
