--- a/src/requirements/nginx/nginx.conf
+++ b/src/requirements/nginx/nginx.conf
@@ -39,13 +39,13 @@ http {
 		#
 		location ~ \.php$ {
 			include snippets/fastcgi-php.conf;
-			# include fastcgi_params;
+			include fastcgi_params;
 		
 			# With php-fpm (or other unix sockets):
 			# fastcgi_pass unix:/run/php/php7.4-fpm.sock;
 			# With php-cgi (or other tcp sockets):
 			fastcgi_pass wordpress:9000;
-			# fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		}
 
 		# deny access to .htaccess files, if Apache's document root
