added secrets and fixed an issue related to the nginx conf, ssl next

--- a/src/.env
+++ b/src/.env
@@ -5,13 +5,10 @@ MYSQL_PASSWORD=1234
 
 WORDPRESS_DB_HOST=mariadb:3306
 WORDPRESS_DB_USER=wordpress
-WORDPRESS_DB_PASSWORD=1234
 WORDPRESS_DB_NAME=wordpress
 
 WORDPRESS_ADMIN=admin
-WORDPRESS_ADMIN_PASS=1234
 WORDPRESS_ADMIN_MAIL=admin@admin.admin
 
-WORDPRESS_USER=user
-WORDPRESS_USER_PASS=1234
+WORDPRESS_USER=author
 WORDPRESS_USER_MAIL=user@user.user
