--- a/src/requirements/nginx/Dockerfile
+++ b/src/requirements/nginx/Dockerfile
@@ -6,6 +6,6 @@ RUN chmod -R 755 /var/www/html
 
 EXPOSE 80
 
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/sites-available/default
 
 CMD ["nginx", "-g", "daemon off;"]
