added key and crt for secure connection with nginx, cleaning up and vm setup next

--- a/src/requirements/nginx/Dockerfile
+++ b/src/requirements/nginx/Dockerfile
@@ -1,10 +1,17 @@
 FROM debian:bullseye
 
-RUN apt update && apt upgrade -y && apt install -y nginx
+RUN apt update && apt upgrade -y && apt install -y nginx openssl
 RUN chown -R www-data:www-data /var/www/html
 RUN chmod -R 755 /var/www/html
 
-EXPOSE 80
+RUN mkdir -p /etc/nginx/ssl
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+	-keyout /etc/nginx/ssl/nginx.key \
+	-out /etc/nginx/ssl/nginx.crt \
+	-subj "/CN=DE/"
+
+
+EXPOSE 443
 
 COPY nginx.conf /etc/nginx/sites-available/default
 
