--- a/src/requirements/nginx/nginx.conf
+++ b/src/requirements/nginx/nginx.conf
@@ -1,12 +1,19 @@
 server {
-listen 80 default_server;
-listen [::]:80 default_server;
+# listen 80 default_server;
+# listen [::]:80 default_server;
 # server_name timschmi.42.fr 
 
 # SSL configuration
 #
-# listen 443 ssl default_server;
-# listen [::]:443 ssl default_server;
+listen 443 ssl default_server;
+listen [::]:443 ssl default_server;
+
+ssl_certificate /etc/nginx/ssl/nginx.crt;
+ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+ssl_protocols TLSv1.2 TLSv1.3;
+
+
 #
 # Note: You should disable gzip for SSL traffic.
 # See: https://bugs.debian.org/773332
