made some changes, mainly makefile and volumes in compose

--- a/src/.env
+++ b/src/.env
@@ -1,14 +1,14 @@
-MYSQL_ROOT_PASSWORD=1234
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress
-MYSQL_PASSWORD=1234
 
 WORDPRESS_DB_HOST=mariadb:3306
 WORDPRESS_DB_USER=wordpress
 WORDPRESS_DB_NAME=wordpress
 
-WORDPRESS_ADMIN=admin
-WORDPRESS_ADMIN_MAIL=admin@admin.admin
+WORDPRESS_ADMIN=root
+WORDPRESS_ADMIN_MAIL=root@timschmi.42.fr
 
 WORDPRESS_USER=author
-WORDPRESS_USER_MAIL=user@user.user
+WORDPRESS_USER_MAIL=user@timschmi.42.fr
+
+DOMAIN_NAME=timschmi.42.fr
