--- a/src/requirements/nginx/Dockerfile
+++ b/src/requirements/nginx/Dockerfile
@@ -8,7 +8,7 @@ RUN mkdir -p /etc/nginx/ssl
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
 	-keyout /etc/nginx/ssl/nginx.key \
 	-out /etc/nginx/ssl/nginx.crt \
-	-subj "/CN=DE/ST=BW/O=42HN/"
+	-subj "/CN=timschmi.42.fr/ST=BW/O=42HN/"
 
 
 EXPOSE 443
