--- a/src/requirements/nginx/nginx.conf
+++ b/src/requirements/nginx/nginx.conf
@@ -29,9 +29,9 @@ ssl_protocols TLSv1.2 TLSv1.3;
 root /var/www/html;
 
 # Add index.php to the list if you are using PHP
-index index.php index.html index.htm index.nginx-debian.html;
+index index.php index.html index.htm;
 
-server_name _;
+# server_name _;
 
 location / {
 	# First attempt to serve request as file, then
